--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,10 +5,12 @@
 
 - title: Know Thy Shelf
   github: https://github.com/szweibel/know-thy-shelf
+  presentation: http://zweibel.net/presentations/knowshelf.html
   image:
   content: wagawaga
 
 - title: New CUNY Catalog API
   github: https://github.com/szweibel/CUNYplusmobile
+  presentation: http://zweibel.net/presentations/catalogAPI.html
   image:
   content: wagawaasaaa
