--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -2,7 +2,10 @@
   github: https://github.com/szweibel/CUNY-IT-Presentation
   link: http://zweibel.net/presentations/raspberry.html
   image:
-  content: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt …
+  content: The Raspberry Pi and Arduino – inexpensive and versatile credit-card-sized computers – have been embraced by the open-source and DIY communities. 
+  The size, affordability and versatility of microcomputers make it easy to develop, deploy and replicate projects. 
+  This presentation described and illustrated how these powerful microcomputers are now finding an expanding range of applications in academic and library settings. 
+  We also demonstrated original, interactive applications for research and instruction.
 
 - title: Know Thy Shelf
   github: https://github.com/szweibel/know-thy-shelf
