--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -16,5 +16,5 @@
   github: https://github.com/szweibel/CUNYplusmobile
   link: http://zweibel.net/presentations/catalogAPI.html
   location: METRO Reference SIG
-  image: /images/holdings.png
+  image: /presentations/images/catalogs_exposed.png
   content: wagawaasaaa
