--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -9,7 +9,7 @@
   github: https://github.com/szweibel/know-thy-shelf
   link: http://zweibel.net/presentations/knowshelf.html
   location: CUNY Emerging Tech Committee
-  image: /images/knowthyshelf.png
+  image: /presentations/images/shelfshot.png
   content: wagawaga
 
 - title: Catalogs Exposed: Web APIs and Libraries
