--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -17,4 +17,4 @@
   link: http://zweibel.net/presentations/catalogAPI.html
   location: METRO Reference SIG
   image: /presentations/images/catalogs_exposed.png
-  content: wagawaasaaa
+  content: This is still a test.
