--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,5 +12,5 @@
 - title: CUNY Catalog API and Mobile App
   github: https://github.com/szweibel/CUNYplusmobile
   presentation: http://zweibel.net/presentations/catalogAPI.html
-  image: /images/source.png
+  image: /presentations/images/mobile_app.png
   content: wagawaasaaa
