--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -3,7 +3,7 @@
   link: http://zweibel.net/presentations/raspberry.html
   image: /presentations/images/raspberry_pi_-_labeled.jpg
   location: CUNY IT Conference
-  content: The Raspberry Pi and Arduino &#8212\; inexpensive and versatile credit-card-sized computers &#8212\; have been embraced by the open-source and DIY communities. The size, affordability, and versatility of microcomputers make it easy to develop, deploy, and replicate projects. We described and illustrated how these powerful microcomputers are now finding an expanding range of applications in academic and library settings. We also demonstrated a few original, interactive applications for research and instruction.
+  content: The Raspberry Pi and Arduino &#8212; inexpensive and versatile credit-card-sized computers &#8212; have been embraced by the open-source and DIY communities. The size, affordability, and versatility of microcomputers make it easy to develop, deploy, and replicate projects. We described and illustrated how these powerful microcomputers are now finding an expanding range of applications in academic and library settings. We also demonstrated a few original, interactive applications for research and instruction.
 
 - title: Know Thy Shelf
   github: https://github.com/szweibel/know-thy-shelf
