--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -17,9 +17,9 @@
   link: http://zweibel.net/presentations/catalogAPI.html
   location: METRO Reference SIG
   image: /presentations/images/catalogs_exposed.png
-  content: This is still a test.
+  content: Organizing the internet for programmatic consumption empowers librarians to make resources available to patrons in new ways.
 
-- title: DH Box: a Turnkey Digital Humanities Laboratory
+- title: DH Box &#8212; a Turnkey Digital Humanities Laboratory
   github: https://github.com/dhbox
   link: http://zweibel.net/presentations/dhbox.html
   location: Hunter ACERT Lunch
