--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -19,7 +19,7 @@
   image: /presentations/images/catalogs_exposed.png
   content: Organizing the internet for programmatic consumption empowers librarians to make resources available to patrons in new ways.
 
-- title: DH Box &#8212; a Turnkey Digital Humanities Laboratory
+- title: DH Box &#8212; a Push-button Digital Humanities Laboratory
   github: https://github.com/dhbox
   link: http://zweibel.net/presentations/dhbox.html
   location: Hunter ACERT Lunch
