--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -21,7 +21,7 @@
 
 - title: DH Box &#8212; a Push-button Digital Humanities Laboratory
   github: https://github.com/dhbox
-  link: http://zweibel.net/presentations/dhbox.html
+  link: http://zweibel.net/presentations/dhbox4lib.html
   location: Hunter ACERT Lunch
-  image: /presentations/images/DH_BOX_LOGO_BLACK.png
-  content: A new project that I'm very excited about.
+  image: /presentations/images/logo.png
+  content: A push-button Digital Humanities laboratory in the cloud.
