--- a/_data/presentations.yml
+++ b/_data/presentations.yml
@@ -24,4 +24,4 @@
   link: http://zweibel.net/presentations/dhbox4lib.html
   location: Hunter ACERT Lunch
   image: /presentations/images/logo.png
-  content: A push-button Digital Humanities laboratory in the cloud.
+  content: A project that simplifies teaching Digital Humanities techniques.
