--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,3 +1,8 @@
+- title: DH Box
+  github: https://github.com/DH-Box/dhbox
+  image: /presentations/images/logo.png
+  content: Setting up an environment for digital humanities computational work can be time-consuming and difficult. DH Box addresses this problem by streamlining installation processes and providing a DH laboratory in the cloud through simple sign-in via a web browser. The DH Box platform comes pre-equipped with essential DH tools such as IPython, RStudio, Omeka, and NLTK.
+
 - title: Augur
   github: https://github.com/szweibel/Augur
   image: /presentations/images/augur/charts_top.png
